# TP_IOC

./: CMakeLists.txt  Draw.ipynb
csv/: iterHeur.csv  testAlgos.csv  testComplexite.csv  testComplexiteNBNoeud.csv  testSolution.csv  testStrategiesBB.csv
src/: kpSolver.cpp  kpSolver.hpp  kpSolverBB.cpp  kpSolverBB.hpp  kpSolverDP.cpp  kpSolverDP.hpp  kpSolverGreedy.hpp  kpSolverHeurDP.cpp  nodeBB.cpp  nodeBB.hpp
test/: KnapsackSolvers.cpp  test.cpp  testAlgos.cpp  testBB.cpp  testCasesinutile.cpp  testComplexite.cpp  testComplexiteNBNoeud.cpp  testHeur.cpp  testIterHeur.cpp  testMN.cpp  testProgDyn.cpp  testSolution.cpp  testStrategiesBB.cpp
